--- a/mode-settings/corfu-vertico-settings.org
+++ b/mode-settings/corfu-vertico-settings.org
@@ -1,51 +1,55 @@
 * Corfu-Vertico-Orderless
 #+PROPERTY: header-args:emacs-lisp :load yes
 ** Corfu
+:PROPERTIES:
+:ORDERED:  t
+:END:
 #+begin_src emacs-lisp
     (use-package
-     corfu
-     ;; Optional customizations
-     :custom
-     (corfu-cycle t) ;; Enable cycling for `corfu-next/previous'
-     (corfu-auto t) ;; Enable auto completion
-     ;; (corfu-commit-predicate nil)   ;; Do not commit selected candidates on next input
-     (corfu-quit-at-boundary 'separator) ;; Automatically quit at word boundary
-     (corfu-quit-no-match 'separator) ;; Automatically quit if there is no match
-     (corfu-scroll-margin 5) ;; Use scroll margin
-     ;; (corfu-preview-current nil)    ;; Do not preview current candidate
-     (corfu-auto-delay 0.0)
-     (corfu-auto-prefix 1)
-     (corfu-on-exact-match 'quit)
+      corfu
+      ;; Optional customizations
+      :custom
+      (corfu-cycle t) ;; Enable cycling for `corfu-next/previous'
+      (corfu-auto t) ;; Enable auto completion
+      ;; (corfu-commit-predicate nil)   ;; Do not commit selected candidates on next input
+      (corfu-quit-at-boundary 'separator) ;; Automatically quit at word boundary
+      (corfu-quit-no-match 'separator) ;; Automatically quit if there is no match
+      (corfu-scroll-margin 5) ;; Use scroll margin
+      ;; (corfu-preview-current nil)    ;; Do not preview current candidate
+      (corfu-auto-delay 0.0)
+      (corfu-auto-prefix 1)
+      (corfu-on-exact-match 'quit)
 
-     ;; (corfu-separator ?\s)          ;; Orderless field separator
-     ;; (corfu-preview-current nil)    ;; Disable current candidate preview
-     ;; (corfu-preselect-first nil)    ;; Disable candidate preselection
-     ;; (corfu-on-exact-match nil)     ;; Configure handling of exact matches
-     ;; (corfu-echo-documentation nil) ;; Disable documentation in the echo area
-     ;; (corfu-scroll-margin 5)        ;; Use scroll margin
+      ;; (corfu-separator ?\s)          ;; Orderless field separator
+      ;; (corfu-preview-current nil)    ;; Disable current candidate preview
+      ;; (corfu-preselect-first nil)    ;; Disable candidate preselection
+      ;; (corfu-on-exact-match nil)     ;; Configure handling of exact matches
+      ;; (corfu-echo-documentation nil) ;; Disable documentation in the echo area
+      ;; (corfu-scroll-margin 5)        ;; Use scroll margin
 
-     ;; You may want to enable Corfu only for certain modes.
-     ;; :hook ((prog-mode . corfu-mode)
-     ;;        (shell-mode . corfu-mode)
-     ;;        (eshell-mode . corfu-mode))
+      ;; You may want to enable Corfu only for certain modes.
+      ;; :hook ((prog-mode . corfu-mode)
+      ;;        (shell-mode . corfu-mode)
+      ;;        (eshell-mode . corfu-mode))
 
-     ;; Recommended: Enable Corfu globally.
-     ;; This is recommended since dabbrev can be used globally (M-/).
-     :init (global-corfu-mode)
+      ;; Recommended: Enable Corfu globally.
+      ;; This is recommended since dabbrev can be used globally (M-/).
+      :init (global-corfu-mode)
 
-     ;; :config
-     ;; (define-key corfu-map (kbd "M-p") #'corfu-doc-scroll-down) ;; corfu-next
-     ;; (define-key corfu-map (kbd "M-n") #'corfu-doc-scroll-up)  ;; corfu-previous
+      ;; :config
+      ;; (define-key corfu-map (kbd "M-p") #'corfu-doc-scroll-down) ;; corfu-next
+      ;; (define-key corfu-map (kbd "M-n") #'corfu-doc-scroll-up)  ;; corfu-previous
 
-     ;; Quit on save
-     :hook (before-save-hook . corfu-quit)
-     :load-path "straight/build/corfu/extensions"
-     :config
-  (corfu-history-mode 1)
-  (savehist-mode 1)
-  (add-to-list 'savehist-additional-variables 'corfu-history)   ;; (corfu-mode-hook . corfu-doc-mode)
-     ;; :config (corfu-history-mode)
-    )
+      ;; Quit on save
+      :hook (before-save-hook . corfu-quit)
+      :load-path "straight/build/corfu/extensions"
+      :config
+      (require 'corfu-history)
+      (corfu-history-mode 1)
+      (savehist-mode 1)
+      (add-to-list 'savehist-additional-variables 'corfu-history)   
+      ;; (corfu-mode-hook . corfu-doc-mode)
+      )
 #+end_src
 ** Cape
 #+begin_src emacs-lisp :load yes
