--- a/mode-settings/global-settings.org
+++ b/mode-settings/global-settings.org
@@ -138,7 +138,7 @@
 ;; (global-undo-tree-mode)
 
 ;; Long lines
-(global-so-long-mode t)
+ ;; (global-so-long-mode t)
 
 ;; Info modes
 ;; (straight-use-package 'info-plus)
@@ -354,45 +354,41 @@
 
 ** Autoformatting
 #+begin_src emacs-lisp :load yes
-  (use-package
-   apheleia
-   :straight t
-   :config
-   (setf (alist-get 'isort apheleia-formatters)
-         '("isort" "--stdout" "-"))
-   (setf (alist-get 'python-base-mode apheleia-mode-alist)
-         '(isort black))
-   (add-to-list
-    'apheleia-formatters
-    '(prettier-toml
-      npx "prettier" "--stdin-filepath" filepath "--parser=toml"))
-   (add-to-list 'apheleia-mode-alist '(conf-toml-mode . prettier-toml))
-   (defun apheleia-indent-region+ (orig scratch callback)
-     (with-current-buffer scratch
-       (setq-local indent-line-function
-                   (buffer-local-value 'indent-line-function orig))
-       (indent-region (point-min) (point-max))
-       (funcall callback scratch)))
+(use-package
+ apheleia
+ :straight t
+ :config
+ (setf (alist-get 'isort apheleia-formatters)
+       '("isort" "--stdout" "-"))
+ (setf (alist-get 'python-base-mode apheleia-mode-alist)
+       '(isort black))
+ (add-to-list
+  'apheleia-formatters
+  '(prettier-toml
+    npx "prettier" "--stdin-filepath" filepath "--parser=toml"))
+ (add-to-list 'apheleia-mode-alist '(conf-toml-mode . prettier-toml))
+ (defun apheleia-indent-region+ (orig scratch callback)
+   (with-current-buffer scratch
+     (setq-local indent-line-function
+                 (buffer-local-value 'indent-line-function orig))
+     (indent-region (point-min) (point-max))
+     (funcall callback scratch)))
 
-   (push '(indent-region . apheleia-indent-region+) apheleia-formatters)
-   (push '(elisp-mode . indent-region) apheleia-mode-alist)
-   (push '(lisp-interaction-mode . indent-region) apheleia-mode-alist)
+ (push '(jsonian-mode . prettier-json) apheleia-mode-alist)
+ (apheleia-global-mode t))
 
-   (apheleia-global-mode t))
-
-  (literate-elisp-load "elisp-settings.org")
-  (use-package
-   elisp-autofmt
-   :commands (elisp-autofmt-mode)
-   :hook (emacs-lisp-mode . elisp-autofmt-mode)
-   :straight
-   '(elisp-autofmt
-    ;; :files (:defaults "elisp-autofmt")
-    :host nil
-    :type git
-    :repo "https://codeberg.org/ideasman42/emacs-elisp-autofmt.git")
-   :config (setq elisp-autofmt-on-save-p 'always))
-
+(literate-elisp-load "elisp-settings.org")
+(use-package
+ elisp-autofmt
+ :commands (elisp-autofmt-mode)
+ :hook (emacs-lisp-mode . elisp-autofmt-mode)
+ :straight
+ '(elisp-autofmt
+   ;; :files (:defaults "elisp-autofmt")
+   :host nil
+   :type git
+   :repo "https://codeberg.org/ideasman42/emacs-elisp-autofmt.git")
+ :config (setq elisp-autofmt-on-save-p 'always))
 #+end_src
 
 **  Global Keybindings
