--- a/mode-settings/java-settings.org
+++ b/mode-settings/java-settings.org
@@ -2,19 +2,7 @@
 #+PROPERTY: header-args:emacs-lisp :load yes
 
 #+begin_src emacs-lisp
-(straight-use-package 'jq-mode)
-(require 'jq-mode)
-
-;; (straight-use-package '(jq :type git
-;;                                         :host github
-;;                                         :repo "p-baleine/jq.el"
-;;                                         ))
-;; (require 'jq)
-
-(straight-use-package
+(use-package jq-mode :straight t)
+(use-package jsonian :straight
  '(jsonian :type git :host github :repo "iwahbe/jsonian"))
-(require 'jsonian)
-
-
-(provide 'java-settings)
 #+END_SRC
