--- a/mode-settings/magit-settings.org
+++ b/mode-settings/magit-settings.org
@@ -1,62 +1,57 @@
 * Magit
-#+PROPERTY: header-args:emacs-lisp :load yes
+#+property: header-args:emacs-lisp :load yes
 
 #+begin_src emacs-lisp
 (literate-elisp-load "projectile-settings.org")
 (use-package
  magit
  :straight t
+ :demand t
+ :config (use-package transient :straight t)
+
+ (setq vc-handled-backends nil)
+
+ (define-key magit-mode-map (kbd "C-x g") nil)
+ (define-key magit-mode-map (kbd "M-G") 'magit-status)
+ (define-key global-map (kbd "M-G") 'magit-status)
+
+ (define-key magit-mode-map (kbd "M-0") nil)
+ (define-key magit-mode-map (kbd "M-1") nil)
+ (define-key magit-mode-map (kbd "M-2") nil)
+ (define-key magit-mode-map (kbd "M-3") nil)
+
+ (setq magit-delete-by-moving-to-trash nil))
+
+(use-package
+ forge
+ :straight t
  :config
- ;; (add-hook 'magit-post-refresh-hook 'projectile-invalidate-cache)
- )
-(use-package transient :straight t)
+ ; This is so we can access forge information
+ (setq auth-sources '("~/.authinfo")))
 
-(setq vc-handled-backends nil)
 
-(define-key magit-mode-map (kbd "C-x g") nil)
-(define-key magit-mode-map (kbd "M-G") 'magit-status)
-(define-key global-map (kbd "M-G") 'magit-status)
+(use-package
+ git-gutter+
+ :straight t
+ :config (global-git-gutter+-mode t)
 
-(define-key magit-mode-map (kbd "M-0") nil)
-(define-key magit-mode-map (kbd "M-1") nil)
-(define-key magit-mode-map (kbd "M-2") nil)
-(define-key magit-mode-map (kbd "M-3") nil)
+ (setq git-gutter+-modified-sign " ") ;; two space
+ (setq git-gutter+-added-sign "+") ;; multiple character is OK
+ (setq git-gutter+-deleted-sign "-")
 
-(use-package forge :straight t)
+ (set-face-foreground 'git-gutter+-modified "magenta")
+ (set-face-foreground 'git-gutter+-added "dark green")
+ (set-face-foreground 'git-gutter+-deleted "red"))
 
-; This is so we can access forge information
-(setq auth-sources '("~/.authinfo"))
-
-(straight-use-package 'git-gutter+)
-(require 'git-gutter+)
-(global-git-gutter+-mode t)
-
-(setq git-gutter+-modified-sign " ") ;; two space
-(setq git-gutter+-added-sign "+") ;; multiple character is OK
-(setq git-gutter+-deleted-sign "-")
-
-(set-face-foreground 'git-gutter+-modified "magenta")
-(set-face-foreground 'git-gutter+-added "dark green")
-(set-face-foreground 'git-gutter+-deleted "red")
-
-(straight-use-package 'pcre2el)
-(straight-use-package 'async)
-(straight-use-package 'hl-todo)
-(straight-use-package 'rg)
-(straight-use-package 'ag)
+(use-package pcre2el :straight t)
+(use-package async :straight t)
+(use-package hl-todo :straight t)
+(use-package rg :straight t)
+(use-package ag :straight t)
 
 (use-package magit-todos :straight t :config (magit-todos-mode t))
 
-(straight-use-package 'ghub)
-(require 'ghub)
-
-;; (straight-use-package 'magit-delta)
-;; (use-package magit-delta
-;;   :ensure t
-;;   :hook (magit-mode . magit-delta-mode))
-
-
-(setq magit-delete-by-moving-to-trash nil)
+(use-package ghub :straight t)
 
 ; add this so that git gutter plus does not screw up tramp sessions
 ; it disables GGP during tramp
@@ -74,7 +69,4 @@
                (git-gutter+-remote-file-path repo-root file)))
           (git-gutter+-process-diff
            (git-gutter+-local-file-path file)))))))
-
-
-(provide 'magit-settings)
-#+END_SRC
+#+end_src
