--- a/mode-settings/multiple-cursors-settings.org
+++ b/mode-settings/multiple-cursors-settings.org
@@ -2,16 +2,13 @@
 #+PROPERTY: header-args:emacs-lisp :load yes
 
 #+begin_src emacs-lisp
-(straight-use-package 'multiple-cursors)
-(require 'multiple-cursors)
-
-;----MULTIPLE_CURSORS----;
-(global-set-key (kbd "C-M-j") 'mc/edit-lines)
-(global-set-key (kbd "C->") 'mc/mark-next-like-this)
-(global-set-key (kbd "C-<") 'mc/mark-previous-like-this)
-(global-set-key (kbd "C-c C-<") 'mc/mark-all-like-this)
-(global-set-key (kbd "C-M-=") 'mc/mark-all-symbols-like-this)
-
-
-(provide `multiple-cursors-settings)
+(use-package
+ multiple-cursors
+ :straight t
+ :config
+ (global-set-key (kbd "C-M-j") 'mc/edit-lines)
+ (global-set-key (kbd "C->") 'mc/mark-next-like-this)
+ (global-set-key (kbd "C-<") 'mc/mark-previous-like-this)
+ (global-set-key (kbd "C-c C-<") 'mc/mark-all-like-this)
+ (global-set-key (kbd "C-M-=") 'mc/mark-all-symbols-like-this))
 #+END_SRC
