--- a/mode-settings/company-settings.org
+++ b/mode-settings/company-settings.org
@@ -1,25 +1,39 @@
+* Company Settings
+#+property: header-args:emacs-lisp :load no
+
+Company was a great package, but I'm currently not using it. I migrated over to the simpler and more flexible Corfu.
+
+#+begin_src emacs-lisp :load no
 ;----------------AUTO COMPLETE MODE--------------;
-(straight-use-package 'company)
-(require 'company)
-(straight-use-package 'company-quickhelp)
-(require 'company-quickhelp)
-
-;; Sort by recent use
-(company-quickhelp-mode)
-
+(use-package company :straight t
+:config 
 ;; Dont wait to show completions
 (setq company-idle-delay 0)
 (setq company-minimum-prefix-length 1)
 (setq company-quickhelp-delay nil)
-
 (global-company-mode t)
 
-(straight-use-package
+
+(use-package company-async-files :straight
  '(company-async-files
    :type git
    :host github
-   :repo "CeleritasCelery/company-async-files"))
-(require 'company-async-files)
+   :repo "CeleritasCelery/company-async-files")
+
+)
+
+
+; I dont want these company backends
+(setq company-backends (remove 'company-bbdb company-backends))
+(setq company-backends (remove 'company-eclim company-backends))
+(setq company-backends (remove 'company-semantic company-backends))
+(setq company-backends (remove 'company-clang company-backends))
+(setq company-backends (remove 'company-xcode company-backends))
+(setq company-backends (remove 'company-cmake company-backends))
+;; (setq company-backends (remove 'company-files company-backends))
+(setq company-backends
+      (remove 'company-dabbrev-code company-backends))
+(setq company-backends (remove 'company-dabbrev company-backends))
 ; I dont want these company backends
 (setq company-backends (remove 'company-bbdb company-backends))
 (setq company-backends (remove 'company-eclim company-backends))
@@ -32,30 +46,16 @@
       (remove 'company-dabbrev-code company-backends))
 (setq company-backends (remove 'company-dabbrev company-backends))
 
-;; (setq company-backends (remove '(company-dabbrev-code company-gtags company-etags company-keywords . #1#) company-backends))
-;; (company-dabbrev . #1#))
+)
+(use-package company-quickhelp :straight t
+:config ;; Sort by recent use
+(company-quickhelp-mode)
+)
 
 
-(setq company-backends (remove 'company-gtags company-backends))
-(setq company-backends (remove 'company-etags company-backends))
-;; (setq company-backends (remove 'company-keywords company-backends))
-(setq company-backends (remove 'company-oddmuse company-backends))
-
-(add-to-list 'company-backends 'company-capf)
-(add-to-list 'company-backends 'company-elisp)
-;; (add-to-list 'company-backends 'company-async-files)
 
 
-;; (straight-use-package
-;;  '(icons-in-terminal.el :type git :host github :repo "seagle0128/icons-in-terminal.el"))
-;; (straight-use-package 'icons-in-terminal)
-;; (require 'icons-in-terminal)
-;; (icons-in-terminal-icon-for-mode 'python-base-mode) 
 
-
-;; (straight-use-package 'company-box)
-;; (require 'company-box)
-;; (add-hook 'company-mode-hook 'company-box-mode)
 
 (setq company-dabbrev-downcase nil)
 
@@ -90,3 +90,4 @@
 (company-posframe-mode t)
 
 (provide 'company-settings)
+#+end_src
